fix: correct alignment of isDeleted message svg

--- a/stylesheets/_session.scss
+++ b/stylesheets/_session.scss
@@ -339,11 +339,3 @@ input {
     margin: auto auto;
   }
 }
-
-.module-message__text {
-  white-space: pre-wrap;
-
-  svg {
-    margin-inline-end: var(--margins-xs);
-  }
-}
